# Approx-grover-rudolph

./: README.md  pyproject.toml
data/: approx_error_n_2.npy  approx_error_n_3.npy  approx_error_n_5.npy  approx_error_n_7.npy  approx_error_n_8.npy  cnots_vs_d_n_20.npy  exact_merging_comparison_n_20.npy  nonsparse_ordering_alg_n_20.npy  ordering_alg_d_100.npy  ordering_alg_n_10.npy  ordering_alg_n_10_vector.npy  ordering_alg_n_10_vector.tsv  ordering_alg_n_11_vector.npy  ordering_alg_n_12_vector.npy  ordering_alg_n_13_vector.npy  ordering_alg_n_15.npy  ordering_alg_n_15_vector.npy  ordering_alg_n_2.npy  ordering_alg_n_20.npy  ordering_alg_n_3.npy  ordering_alg_n_3_vector.npy  ordering_alg_n_4.npy  ordering_alg_n_5.npy  ordering_alg_n_5_vector.npy  ordering_alg_n_6_vector.npy  ordering_alg_n_7.npy  ordering_alg_n_8.npy  ordering_alg_n_8_vector.npy  ordering_alg_n_9_vector.npy  overlap_comparison_n_10_vector.npy  overlap_comparison_n_14_vector.npy  overlap_comparison_n_15_vector.npy  overlap_comparison_n_5_vector.npy  ratios_fixed_D_1e-04_vs_M_n_20.npy  ratios_fixed_D_5e-04_vs_M_n_15.npy  ratios_fixed_D_5e-05_vs_M_n_15.npy  ratios_fixed_D_5e-05_vs_M_n_20.npy  ratios_n_10.npy  ratios_n_12.npy  ratios_n_15.npy  (+8 more)
scripts/: collect_data.py  collect_data_vector.py  exact_merging_comparison.py  hybrid_simulation.py  plot.py  plot_vector.py  simulation.py  vector_simulation.py
src/: approx_algorithm.py
src/approx_grover_rudolph/: __init__.py  approx_algorithm.py  exact_optimization.py  gate_count.py  grover_rudolph.py  helping_functions.py  simulation.py  varying_M.py  (+1 more)
(+2 files in other folders)
